--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>Document</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="overflow-x-hidden">
+<body class="container-fluid">
     <header class="px-4">
         <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-md sticky-top">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-md sticky-top d-flex align-items-center">
+            <div class="container-fluid p-0">
                 <div class="navbar-brand col-3 col-md-1">
                     <a href="index.html">
                         <img src="images/logo.svg" class="img-fluid" alt="logo">
@@ -24,7 +24,7 @@
                 <button class="navbar-toggler col-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end mt-sm-2" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-end mt-sm-2 mb-2" id="navbarSupportedContent">
                     <ul class="navbar-nav d-md-flex align-items-center">
                         <li class="list-group-item bg-transparent border-0 nav-item me-3"><a href="#descriptionSection" class="nav_text link_nav_section" id="nav_description">DESCRIPTION</a></li>
                         <li class="list-group-item bg-transparent border-0 nav-item me-3"><a href="#featuresSection" class="nav_text link_nav_section" id="nav_features">FEATURES</a></li>
@@ -48,9 +48,9 @@
         </nav>
     </header>
     <!-- MAIN -->
-    <main class="m-0 p-0 d-flex flex-column align-items-center scroller">
+    <main class="container-fluid m-0 p-0 d-flex flex-column align-items-center justify-content-center">
         <!-- FIRST SECTION -->
-        <section class="position-relative mt-4 z-1 p-0" id="mobileApp">
+        <section class="container-fluid p-0 position-relative mt-4 d-flex flex-column justify-content-center overflow-x-hidden" id="mobileApp">
             <div class="d-flex justify-content-between mx-2">
                 <img src="images/decorative-green-diamond.svg" alt="Green Diamond" id="green_diamond">
                 <img src="images/decorative-yellow-circle.svg" alt="Yellow Circle" id="yellow_circle">
@@ -74,7 +74,9 @@
                     </button>
                 </div>
             </div>
-            <img src="images/header-iphone.png" alt="mobile photo" class="img-fluid h-50 mt-5" id="rotating-image">
+            <div class="d-flex justify-content-center">
+                <img src="images/header-iphone.png" alt="mobile photo" class="img-fluid m-0 p-auto mt-5 img_phone" id="rotating-image">
+            </div>
             <ul class="list-group list-group-horizontal d-flex justify-content-center align-items-center row m-0 p-0">
                 <li class="list-group-item bg-transparent border-0 col-3 d-flex flex-column align-items-center">
                     <div>
@@ -111,11 +113,11 @@
         <!-- SEPARATOR -->
         <hr id="descriptionSection" class="hr_separador">
         <!-- SECTION DESCRIPTION -->
-        <section class="section_box">
+        <section class="section_box container-fluid p-0">
             <!-- DESCRIPTION 1 -->
-            <section class="row m-4 px-md-5">
+            <section class="row row-cols-2 m-4 px-md-5 container-fluid p-0">
                 <img src="images/description-1-app.png" class="col-md-6 col-12 mt-4 mt-md-0 img-fluid mb-4 mb-md-0" alt="description_section">
-                <div class="col justify-content-around">
+                <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
                     <h2>Organize Your Time And Start Getting Results</h2>
                     <p>Sync is the first mobile app on the market to harness the power of social connections to help you stop procrastinating and start getting things done. Give it a try and see the changes right away</p>
                     <ul>
@@ -127,8 +129,8 @@
                 </div>
             </section>
             <!-- DESCRIPTION 2 -->
-            <section class="row my-5 dark_section p-3 p-md-5"> 
-                <div class="col justify-content-around">
+            <section class="row my-5 dark_section p-3 p-md-5 container-fluid p-0"> 
+                <div class="col d-flex flex-column justify-content-center">
                     <div class="row row-cols-md-1 row-cols-6">
                         <div class="calendar_skills col-3 col-md-auto calendar_schedule mt-2 mt-md-0">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clock-hour-4 img-fluid" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -175,49 +177,49 @@
         <!-- SEPARATOR -->
         <hr id="featuresSection"  class="hr_separador">
         <!-- SECTION TESTIMONIALS -->
-        <section class="container section_box">
+        <section class="container-fluid p-0 section_box">
             <h2 class="text-center">User Testimonials</h2>
-            <section class="row mt-5">
-                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+            <section class="row mt-5 container-fluid p-0">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
                     <p class="test_text">I love using Sync for my personal development needs. It meets all my requirements and it actually helps a lot with focusing skills.</p>
                     <p class="test_name">Rick Jones - Designer</p>
                 </article>
-                <article class="container col col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
                     <p class="test_text">After trying out a large number of personal coaching apps I decided to give Sync a try and what a wonderful surprise it was.</p>
                     <p class="test_name">Lynda Marquez - Developer</p>
                 </article>
-                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
                     <p class="test_text">Never dreamed I could learn so fast how to focus on my personal goals and improve my life to levels I never thought possible.</p>
                     <p class="test_name">Jay Frisco - Marketer</p>
                 </article>
             </section>
-            <section class="bg-light py-4 section_logos">
-                <img src="images/customer-logo-1.png" alt="primester logo" class="img_fluid mw-50 img_logos1">
-                <img src="images/customer-logo-2.png" alt="greenapp logo" class="img_fluid mw-50 img_logos2">
-                <img src="images/customer-logo-3.png" alt="voltemer logo" class="img_fluid mw-50 img_logos3">
-                <img src="images/customer-logo-4.png" alt="keyrunner logo" class="img_fluid mw-50 img_logos4">
-                <img src="images/customer-logo-5.png" alt="amplifier logo" class="img_fluid mw-50 img_logos5">
+            <section class="bg-light py-4 section_logos container-fluid p-0">
+                <img src="images/customer-logo-1.png" alt="primester logo" class="img-fluid mw-50 img_logos1">
+                <img src="images/customer-logo-2.png" alt="greenapp logo" class="img-fluid mw-50 img_logos2">
+                <img src="images/customer-logo-3.png" alt="voltemer logo" class="img-fluid mw-50 img_logos3">
+                <img src="images/customer-logo-4.png" alt="keyrunner logo" class="img-fluid mw-50 img_logos4">
+                <img src="images/customer-logo-5.png" alt="amplifier logo" class="img-fluid mw-50 img_logos5">
             </section>
-            <section class="row mt-5">
-                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+            <section class="row mt-5 container-fluid p-0">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
                     <p class="test_text">I got so much value from using Sync in my daily life for which I am very grateful and would recommend it to everybody</p>
                     <p class="test_name">Frank Gibson - Manager</p>
                 </article>
-                <article class="container col col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
                     <p class="test_text">If you have great goals but can't figure out a way to keep focused then you should definitely give Sync a try and see the results</p>
                     <p class="test_name">Rita Longmile - Designer</p>
                 </article>
-                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
                     <p class="test_text">I've been looking for a great organizer app for such a long time but now I am really happy that I found Sync. It's been working great</p>
@@ -228,7 +230,7 @@
         <!-- SEPARATOR -->
         <hr id="screensSection" class="hr_separador">
         <!-- SECTION SCREENS -->
-        <section>
+        <section class="container-fluid p-0">
             <ul class="dark_section list-group list-group-horizontal d-flex justify-content-center align-items-center justify-content-between m-0 p-5 row">
                 <li class="list-group-item bg-transparent border-0 d-flex flex-column align-items-center col col-md-2 screens_container">
                     <div>
@@ -266,9 +268,9 @@
                     <p class="text_views">Orders Received</p>
                 </li>
             </ul>
-            <section>
-                <div>
-                    <img src="images/download-iphone.png" alt="phone screens" class="img-fluid h-50 mt-5" id="phone_anima">
+            <section class="container-fluid p-0">
+                <div class="d-flex justify-content-center">
+                    <img src="images/download-iphone.png" alt="phone screens" class="img-fluid mt-5 img_phone" id="phone_anima">
                 </div>
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <p class="w-75 text-center z-2">Do you feel like you're wasting time with small stuff instead of working towards your goals? Start using Sync to organize your time and get a grip on your personal development</p>
@@ -309,20 +311,20 @@
             <article class="col">
                 <h3>Value Links</h3>
                 <section class="d-flex flex-column">
-                    <a href="#" class="mb-2">Terms & Conditions</a>
-                    <a href="#" class="mb-2">Privacy Policy</a>
-                    <a href="#" class="mb-2">Article Details</a>
+                    <a href="#" class="mb-2 d-flex flex-column justify-content-center">Terms & Conditions</a>
+                    <a href="#" class="mb-2 d-flex flex-column justify-content-center">Privacy Policy</a>
+                    <a href="#" class="mb-2 d-flex flex-column justify-content-center">Article Details</a>
                 </section>
             </article>
             <article class="col">
                 <h3>Other Apps</h3>
                 <section class="d-flex flex-column">
-                    <a href="#" class="mb-2">Scientific Calculator</a>
-                    <a href="#" class="mb-2">Advanced Timer</a>
-                    <a href="#" class="mb-2">Music Store</a>
+                    <a href="#" class="mb-2 d-flex flex-column justify-content-center">Scientific Calculator</a>
+                    <a href="#" class="mb-2 d-flex flex-column justify-content-center">Advanced Timer</a>
+                    <a href="#" class="mb-2 d-flex flex-column justify-content-center">Music Store</a>
                 </section>
             </article>
-            <div class="col d-flex">
+            <div class="col d-flex justify-content-center">
                 <a href="#"><img src="images/facebook.svg" class="logos_footer ml-4" alt="logo facebook"></a>
                 <a href="#"><img src="images/twitter.svg" class="logos_footer ml-4" alt="logo twitter"></a>
                 <a href="#"><img src="images/pinterest.svg" class="logos_footer ml-4" alt="logo pinterest"></a>
